--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -82,3 +82,13 @@ main h3{
 #crime-list-table {
   margin-top: 20px;
 }
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 90%;
+  margin: auto;
+}
+
+.modal-content{
+  border-radius: 0px;
+}
