sidebar bg color chnaged

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -37,7 +37,7 @@ h1 {
 .sidebar {
   padding-left: 0;
   padding-right: 0;
-  background-color: #aaa;
+  background-color: #f9f9f9;
 }
 
 .sidebar .nav {
